# CrewAI-MultiAgent-AgroMind

./: README.md
Deploimenet avec Gradio && FastAPI - Copie/: Notbook_Deploy_Model_GradioUI.ipynb  Service_QA_FastAI.py  Test_Service_Api.py
agromind/: README.md  app_ui.py  pyproject.toml  report.md  test_final.py  verify_dict_tools.py  verify_setup.py
agromind/src/agromind/: __init__.py  crew.py  main.py
agromind/src/agromind/config/: agents.yaml  tasks.yaml
agromind/src/agromind/tools/: __init__.py  classify_plant_by_api.py
