[project]
name = "agromind"
version = "0.1.0"
description = "AgroMind using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
agromind = "agromind.main:run"
run_crew = "agromind.main:run"
train = "agromind.main:train"
replay = "agromind.main:replay"
test = "agromind.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
